# texed

./: .gitignore  CMakeLists.txt  Makefile  README.md  Texed.c
src/: Makefile  cli.c  editor.c  editor.h  file.c  files.c  files.h  function.c  function.h  log.c  main  main.c  screen.c  terminal.c  terminal.h  text.c  var.h
src/includes/: cli.h  editor.h  file.h  log.h  screen.h  text.h  version.h
